# wayshot

./: .editorconfig  .gitignore  .gitmodules  .typos.toml  0001-wayshot-stash.patch  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-BSD  Makefile  README.md  build.rs  config.toml  deny.toml  flake.nix  release.sh  shell.nix
.github/: dependabot.yml
.github/workflows/: benchmark.yml  build.yml  deny.yml  deploy.yml  docs.yml  fmt-clippy.yml  security_audit.yml  test-coverage.yml  typos.yml
Completions/: wayshot.bash  wayshot.elvish  wayshot.fish  wayshot.powershell  wayshot.zsh
contrib/git/: PKGBUILD
docs/: wayshot.1.scd  wayshot.5.scd  wayshot.7.scd
libwayshot/: Cargo.toml  README.md
libwayshot/examples/: toplevel_support_check.rs  waymirror.rs
libwayshot/examples/waymirror-egl/: Cargo.toml  README.md
libwayshot/examples/waymirror-egl/src/: dispatch.rs  error.rs  main.rs  state.rs  utils.rs
libwayshot/examples/waymirror-egl/src/shaders/: frag.glsl  vert.glsl
libwayshot/src/: convert.rs  dispatch.rs  egl.rs  error.rs  ext_image_protocols.rs  image_util.rs  lib.rs  output.rs  region.rs  screencast.rs  screencopy.rs  tests.rs
libwayshot/src/tests/: convert_tests.rs  dispatch.rs  error.rs  image_util.rs  lib.rs  mod.rs  output.rs  region.rs  screencopy.rs
src/: backend.rs  clap.rs  convert.rs  dmabuf_export.rs  main.rs  output.rs  screencopy.rs  shm.rs  wayshot.rs
test/: swayconfig
waymirror-egl/: Cargo.toml
waymirror-egl/src/: dispatch.rs  error.rs  main.rs  state.rs  utils.rs
waymirror-egl/src/shaders/: frag.glsl
wayshot/: Cargo.toml  build.rs  config.toml
wayshot/src/: clap.rs  cli.rs  clipboard.rs  color_picker.rs  config.rs  ext_wayshot.rs  image_util.rs  logger.rs  notification.rs  output.rs  preview.rs  screenshot.rs  settings.rs  utils.rs  wayshot.rs
