[workspace]
resolver = "2"
members = ["wayshot", "libwayshot", "./waymirror-egl"]

[workspace.package]
authors = ["Shinyzenith <https://aakash.is-a.dev>"]
homepage = "https://waycrate.github.io"
description = "Screenshot crate for wlroots based compositors implementing the zwlr_screencopy_v1 protocol."
keywords = ["screenshot", "wayland", "wlroots", "wayshot"]
license = "BSD-2-Clause"
repository = "https://github.com/waycrate/wayshot"
version = "1.4.3"
edition = "2024"

[workspace.dependencies]
libwayshot = { version = "0.7.0", path = "./libwayshot" }
tracing = "0.1.44"
r-egl-wayland = "0.2.0"
