[package]
name = "libwayshot"
version = "0.3.2-dev"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["png"]
png = ["image/png"]
jpeg = ["image/jpeg"]
qoi = ["image/qoi"]
webp = ["image/webp"]
avif = ["image/avif"]

[dependencies]
tracing.workspace = true
image = { version = "0.25", default-features = false }
memmap2 = "0.9.5"
rustix = { version = "1.0", features = ["fs", "shm"] }
thiserror = "2"

wayland-client = "0.31.8"
wayland-protocols = { version = "0.32.6", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.3.6", features = ["client"] }
wayland-backend = { version = "0.3.8", features = ["client_system"] }

gbm = "0.18.0"
drm = "0.14.1"

gl = "0.14.0"
khronos-egl = { version = "6.0.0", features = ["static"] }
nix = { version = "0.30.1", features = ["fs", "mman"] }
