[package]
name = "libwayshot"
version = "0.7.0"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["png"]
png = ["image/png"]
jpeg = ["image/jpeg"]
qoi = ["image/qoi"]
webp = ["image/webp"]
avif = ["image/avif"]

[dependencies]
tracing.workspace = true
image.workspace = true
memmap2 = "0.9.5"
rustix = { workspace = true, features = ["fs", "shm"] }
thiserror.workspace = true

wayland-client.workspace = true
wayland-protocols = { workspace = true, features = [
	"client",
	"staging",
	"unstable",
] }
wayland-protocols-wlr = { version = "0.3.6", features = ["client"] }
wayland-backend = { version = "0.3.12", features = ["client_system"] }

gbm = "0.18.0"
drm = "0.14.1"

gl.workspace = true
r-egl-wayland.workspace = true
