[package]
name = "waymirror-egl"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "0.14.0"
gl_loader = "0.1.2"
khronos-egl = { version = "6.0.0", features = ["static"] }
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wayland-backend = { version = "0.3.3", features = ["client_system"] }
wayland-client = { version = "0.31.2" }
wayland-egl = { version = "0.32.0" }
wayland-protocols = { version = "0.31.2", features = ["client"] }
libwayshot={path="../.."}